--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,24 @@
 {
-    "name": "itpanda-llc/mikbill-sberbank-eps-php-api",
-    "description": "API for MikBill billing system for accepting payments through the payment system of Sberbank PJSC",
-    "type": "library",
-    "keywords": [
-        "panda", "sberbank", "mikbill", "processing"
-    ],
-    "homepage": "https://github.com/itpanda-llc/mikbill-sberbank-eps-php-api",
+    "name": "itpanda-llc/mikbill-sberbank-eps-api",
+    "description": "API for integration of the MikBill billing system with unified payment system of PJSC Sberbank",
+    "homepage": "https://github.com/itpanda-llc/mikbill-sberbank-eps-api",
     "license": "MIT",
     "authors": [
         {
             "name": "itpanda-llc",
-            "homepage": "https://github.com/itpanda-llc",
-            "role": "developer"
+            "homepage": "https://github.com/itpanda-llc"
         }
     ],
     "autoload": {
         "psr-4": {
-            "Panda\\MikBill\\Sberbank\\EPSAPI\\": "src"
+            "Panda\\MikBill\\Sberbank\\EpsApi\\": "src/"
         }
     },
     "require": {
+        "php": ">=7.2",
+        "ext-libxml": "*",
         "ext-pdo": "*",
-        "ext-simplexml": "*"
+        "ext-simplexml": "*",
+        "vlucas/phpdotenv": "^5.3"
     }
 }
